# upkeepnow

./: .gitignore  Dockerfile  README.md  env_settings.py  firebase_key.json  logger.py  main.py  pyproject.toml  requirements.txt  teste.py
.github/workflows/: ruff-linter.yml
app/: env_settings.py
app/auth/: user_token.py
app/db/: db_session.py  firebase.py  upkeepnow-6ec42-firebase-adminsdk-fbsvc-3cd8c824e3.json  upkeepnow-6ec42-firebase-adminsdk-fbsvc-59deaef035.json
app/models/: __init__.py  atividade.py  funcionario.py
app/routers/: activities.py  activitys.py  auth.py  chat.py  web_socket.py
app/schemas/activity/: __init__.py  activity_schema.py
app/schemas/atividades/: __init__.py
app/schemas/auth/: __init__.py  change_password.py  create_user.py  login_user.py
app/schemas/chat/: __init__.py  chat.py  create.py
app/services/: utils.py
app/services/activities/: activities_repositories.py  activities_services.py
app/services/activitys/: activitys_repositories.py  actvitys_services.py
app/services/auth/: auth_repositories.py  auth_services.py  auth_utils.py  security.py  user_token.py
app/services/chat/: chat_service.py
auth/: user_token.py
auth/models/: create_user.py
auth/payloads/: create_user.py  login_user.py
conf/: db_session.py
models/: __all_models.py  atividade.py  funcionario.py
routers/: auth.py
